# problem-solver-framework

./: .gitignore  Makefile.am  README.md  configure.ac
docs/: .gitignore  Doxyfile.in  Makefile.am
lib/: .gitignore  Makefile.am
lib/cpp/: .gitignore  Makefile.am
res/: README.md  list_of_10_items.txt  list_of_15_items.txt  list_of_5_items.txt  list_of_8_items.txt  list_of_files.txt  list_of_hard.txt  list_of_special_cases.txt  list_of_todos.txt
res/cpp/: clockit.cc  test.cc
res/logs/: csv.sh
res/ours/: .gitignore  10_big_and_small_01.txt  10_big_and_small_02.txt  10_big_and_small_03.txt  10_big_and_small_04.txt  10_small_01.txt  10_small_02.txt  10_small_03.txt  10_small_04.txt  10_uniform_01.txt  10_uniform_02.txt  15_big_01.txt  15_big_02.txt  15_big_and_small_01.txt  15_uniform_01.txt  15_uniform_02.txt  15_uniform_03.txt  5_big_and_small_01.txt  5_big_and_small_02.txt  5_big_and_small_03.txt  5_small_01.txt  5_small_02.txt  5_small_03.txt  5_small_04.txt  5_uniform_01.txt  5_uniform_02.txt  5_uniform_03.txt  8_big_and_small_01.txt  8_big_and_small_02.txt  raw.txt  (+9 more)
src/: Makefile.am  binpackingproblem.h  binpackingsolution.cpp  binpackingsolution.h  exhaustivesolver.cpp  exhaustivesolver.h  fileio.cpp  fileio.h  main.cpp  problem.cpp  problem.h  problemgenerator.cpp  problemgenerator.h  run.sh  solver.h  util.cpp  util.h
src/core/: Makefile.am  problem.h  problemgenerator.cpp  problemgenerator.h  solution.cpp  solution.h  solutioncontainer.cpp  solutioncontainer.h  solver.cpp
src/core/binpacking/: Makefile.am  binpackingneighborhood.cpp  binpackingneighborhood.h  binpackingproblem.cpp  binpackingproblem.h  binpackingsolution.cpp  binpackingsolution.h  exhaustivesolver.cpp  exhaustivesolver.h  firstfitsolver.cpp  firstfitsolver.h  simulatedannealingsolver.cpp  simulatedannealingsolver.h  steepestdescentsolver.cpp  steepestdescentsolver.h
src/util/: Makefile.am  util.cpp  util.h
tests/: .gitignore  Makefile.am  testing.cpp
(+10 files in other folders)
