AM_CXXFLAGS = $(WARN_CXXFLAGS)

bin_PROGRAMS = main

main_SOURCES = main.cpp util.cpp util.h \
	solution.cpp \
    solution.h \
	binpackingsolution.cpp \
    binpackingsolution.h \
	problem.cpp \
    problem.h \
    binpackingproblem.cpp \
    binpackingproblem.h \
    solver.cpp \
    solver.h \
    exhaustivesolver.cpp \
    exhaustivesolver.h \
    fileio.cpp \
    fileio.h \
    problemgenerator.cpp \
    problemgenerator.h
