lib_LIBRARIES = libbinpacking.a

libbinpacking_a_SOURCES = \
	\
	binpackingproblem.cpp \
    binpackingproblem.h \
	\
	binpackingsolution.cpp \
    binpackingsolution.h \
	\
	exhaustivesolver.cpp \
    exhaustivesolver.h	\
	\
	firstfitsolver.cpp \
	firstfitsolver.h \
	#\
	#steepestdescentsolver.cpp \
	#steepestdescentsolver.h

AM_CXXFLAGS = $(WARN_CXXFLAGS)
